--- a/style.css
+++ b/style.css
@@ -61,3 +61,16 @@ blockquote p,ul,ol {
 .search input[type="submit"] {
     display: none;
 }
+
+ /*----------LOGO above TOC---------*/
+
+/*----------#TOC::before {
+  content: "";
+  display: block;
+  height: 100px;
+  margin: 2em 20px 40px 20px;
+  background-image: url("mal-logo-col.png");
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+}---------*/
